configuracion de mongo desde cloud

--- a/PetFinderAPI/appsettings.json
+++ b/PetFinderAPI/appsettings.json
@@ -1,7 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "PetFinderDB"
+    "ConnectionString": "mongodb://Nogbre:78094453helder@35.239.184.38:27017/PetFinderDB?authMechanism=SCRAM-SHA-1"
   },
   "Logging": {
     "LogLevel": {
