--- a/PetFinderAPI/PetFinderAPI.csproj
+++ b/PetFinderAPI/PetFinderAPI.csproj
@@ -11,8 +11,11 @@
     <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.1.0" />
     <PackageReference Include="HotChocolate.Data" Version="14.1.0" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
   </ItemGroup>
 
 </Project>
